--- a/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
@@ -199,7 +199,7 @@
   <!-- Judul Halaman -->
   <div class="title-section">
     <h1>🕵️‍♂️ Petualangan Seru di Negeri Kata & Cerita</h1>
-    <p>Uji pengetahuanmu lewat latihan soal yang seru dan penuh tantangan!</p>
+    <p>Uji pengetahuanmu lewat petualangan seru dan penuh tantangan!</p>
   </div>
 
   <!-- Menu Interaktif dengan dropdown latihan -->
@@ -209,16 +209,16 @@
         <span class="emoji">📝</span> Yuk, Kerjakan Latihan! ▼
       </button>
       <div class="dropdown-content-map">
-        <a href="soal-petualangan.html" style="--hover-bg:#b3d9ff;">🏁 Latihan 1</a>
-        <a href="soal-petualangan2.html" style="--hover-bg:#b3ffcc;">🎯 Latihan 2</a>
-        <a href="soal-petualangan3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
-        <a href="soal-petualangan4.html" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
-        <a href="soal-petualangan5.html" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
-        <a href="soal-petualangan6.html" style="--hover-bg:#ffcce6;">📚 Latihan 6</a>
-        <a href="#latihan7" style="--hover-bg:#b3fff0;">🎉 Latihan 7</a>
-        <a href="#latihan8" style="--hover-bg:#ffd9b3;">🧩 Latihan 8</a>
-        <a href="#latihan9" style="--hover-bg:#e6ccff;">⭐ Latihan 9</a>
-        <a href="#latihan10" style="--hover-bg:#ccffdd;">🏆 Latihan 10</a>
+        <a href="soal-petualangan.html" style="--hover-bg:#b3d9ff;">🏁 Petualangan 1</a>
+        <a href="soal-petualangan2.html" style="--hover-bg:#b3ffcc;">🎯 Petualangan 2</a>
+        <a href="soal-petualangan3.html" style="--hover-bg:#ffb3b3;">🔥 Petualangan 3</a>
+        <a href="soal-petualangan4.html" style="--hover-bg:#fff0b3;">🚀 Petualangan 4</a>
+        <a href="soal-petualangan5.html" style="--hover-bg:#d9b3ff;">💡 Petualangan 5</a>
+        <a href="soal-petualangan6.html" style="--hover-bg:#ffcce6;">📚 Petualangan 6</a>
+        <a href="#latihan7" style="--hover-bg:#b3fff0;">🎉 Petualangan 7</a>
+        <a href="#latihan8" style="--hover-bg:#ffd9b3;">🧩 Petualangan 8</a>
+        <a href="#latihan9" style="--hover-bg:#e6ccff;">⭐ Petualangan 9</a>
+        <a href="#latihan10" style="--hover-bg:#ccffdd;">🏆 Petualangan 10</a>
       </div>
     </div>
   </div>
@@ -241,6 +241,7 @@
 
 </body>
 </html>
+
 
 
 
