--- a/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
+++ b/kelas-5/Pulau-Bahasa-Indonesia/🕵Petualangan-Seru.html
@@ -206,7 +206,7 @@
   <div class="map-grid">
     <div class="dropdown-map">
       <button class="map-item dropdown-btn">
-        <span class="emoji">📝</span> Yuk, Kerjakan Latihan! ▼
+        <span class="emoji">📝</span> Yuk, Mulai Petualangan! ▼
       </button>
       <div class="dropdown-content-map">
         <a href="soal-petualangan.html" style="--hover-bg:#b3d9ff;">🏁 Petualangan 1</a>
@@ -241,6 +241,7 @@
 
 </body>
 </html>
+
 
 
 
