--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila-5.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila-5.html
@@ -199,26 +199,26 @@
   <!-- Judul Halaman -->
   <div class="title-section">
     <h1>📜 Sejarah Kelahiran Pancasila</h1>
-    <p>Uji pengetahuanmu tentang sejarah Pancasila lewat latihan soal berikut!</p>
+    <p>Uji pengetahuanmu tentang sejarah Pancasila lewat penjelajahan berikut!</p>
   </div>
 
   <!-- Menu Interaktif dengan dropdown latihan -->
   <div class="map-grid">
     <div class="dropdown-map">
       <button class="map-item dropdown-btn">
-        <span class="emoji">📝</span> Yuk, Kerjakan Latihan Pancasila! ▼
+        <span class="emoji">📝</span> Yuk, Mulai Penjelajahan! ▼
       </button>
       <div class="dropdown-content-map">
-        <a href="sejarah-kelahiran-pancasila/soal-latihan1-istana.html" style="--hover-bg:#b3d9ff;">🏁 Latihan 1</a>
-        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html" style="--hover-bg:#b3ffcc;">🎯 Latihan 2</a>
-        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-3.html" style="--hover-bg:#ffb3b3;">🔥 Latihan 3</a>
-        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-4.html" style="--hover-bg:#fff0b3;">🚀 Latihan 4</a>
-        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-5.html" style="--hover-bg:#d9b3ff;">💡 Latihan 5</a>
-        <a href="#latihan6" style="--hover-bg:#ffcce6;">📚 Latihan 6</a>
-        <a href="#latihan7" style="--hover-bg:#b3fff0;">🎉 Latihan 7</a>
-        <a href="#latihan8" style="--hover-bg:#ffd9b3;">🧩 Latihan 8</a>
-        <a href="#latihan9" style="--hover-bg:#e6ccff;">⭐ Latihan 9</a>
-        <a href="#latihan10" style="--hover-bg:#ccffdd;">🏆 Latihan 10</a>
+        <a href="sejarah-kelahiran-pancasila/soal-latihan1-istana.html" style="--hover-bg:#b3d9ff;">🏁 Jelajah 1</a>
+        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-2.html" style="--hover-bg:#b3ffcc;">🎯 Jelajah 2</a>
+        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-3.html" style="--hover-bg:#ffb3b3;">🔥 Jelajah 3</a>
+        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-4.html" style="--hover-bg:#fff0b3;">🚀 Jelajah 4</a>
+        <a href="sejarah-kelahiran-pancasila/soal/Latihan-Soal-5.html" style="--hover-bg:#d9b3ff;">💡 Jelajah 5</a>
+        <a href="#latihan6" style="--hover-bg:#ffcce6;">📚 Jelajah 6</a>
+        <a href="#latihan7" style="--hover-bg:#b3fff0;">🎉 Jelajah 7</a>
+        <a href="#latihan8" style="--hover-bg:#ffd9b3;">🧩 Jelajah 8</a>
+        <a href="#latihan9" style="--hover-bg:#e6ccff;">⭐ Jelajah 9</a>
+        <a href="#latihan10" style="--hover-bg:#ccffdd;">🏆 Jelajah 10</a>
       </div>
     </div>
   </div>
