--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
@@ -138,7 +138,7 @@ button:hover {
 <body>
 <div class="container">
     <div class="nav">
-        <a href="../sejarah-kelahiran-pancasila-5.html">◀️ kembali</a>
+        <a href="../../sejarah-kelahiran-pancasila-5.html">◀️ kembali</a>
         <a href="Soal_PKn_Kelas_5.pdf" download>📥 Download</a>
     </div>
 
